# cpp-apx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpp_apx.cppcheck
app/apx_file_demo/: CMakeLists.txt
app/apx_file_demo/src/: apx_file_demo.cpp
app/apx_test_client/: CMakeLists.txt
app/apx_test_client/src/: test_client.cpp
app/test_client/src/: test_client.cpp
apx/: CMakeLists.txt
apx/include/cpp-apx/: attribute_parser.h  byte_port_map.h  client.h  client_connection.h  command.h  compiler.h  computation.h  connection_interface.h  data_element.h  data_signature.h  data_type.h  decoder.h  deserializer.h  error.h  event_listener.h  file.h  file_cache.h  file_client.h  file_info.h  file_manager.h  file_manager_receiver.h  file_manager_shared.h  file_manager_worker.h  file_map.h  mock_client_connection.h  node.h  node_data.h  node_instance.h  node_manager.h  node_serializer.h  numheader.h  pack.h  parser.h  port.cpp  port.h  port_attribute.h  port_instance.h  port_ref.h  program.h  qt_serializer.h  (+10 more)
apx/src/: attribute_parser.cpp  byte_port_map.cpp  client.cpp  client_connection.cpp  command.cpp  compiler.cpp  computation.cpp  data_element.cpp  data_signature.cpp  data_type.cpp  decoder.cpp  deserializer.cpp  file.cpp  file_cache.cpp  file_client.cpp  file_info.cpp  file_manager.cpp  file_manager_receiver.cpp  file_manager_shared.cpp  file_manager_worker.cpp  file_map.cpp  mock_client_connection.cpp  node.cpp  node_data.cpp  node_instance.cpp  node_manager.cpp  node_serializer.cpp  numheader.cpp  pack.cpp  parser.cpp  port.cpp  port_instance.cpp  program.cpp  qt_serializer.cpp  remotefile.cpp  serializer.cpp  sha256.cpp  signature_parser.cpp  socket_client_connection.cpp  type_attribute.cpp  (+1 more)
apx/test/: client_spy.cpp  client_spy.h  sample_nodes.cpp  sample_nodes.h  test_attribute_parser.cpp  test_client.cpp  test_client_connection.cpp  test_compiler.cpp  test_computation.cpp  test_data_element.cpp  test_data_signature.cpp  test_decoder.cpp  test_deserializer.cpp  test_file.cpp  test_file_cache.cpp  test_file_client.cpp  test_file_info.cpp  test_file_manager.cpp  test_file_manager_receiver.cpp  test_file_manager_shared.cpp  test_file_map.cpp  test_filemanager_receiver.cpp  test_node.cpp  test_node_data.cpp  test_node_manager.cpp  test_node_serializer.cpp  test_numheader.cpp  test_pack.cpp  test_parser.cpp  test_port_instance.cpp  test_program.cpp  test_qt_serializer.cpp  test_remotefile.cpp  test_serializer.cpp  test_signature_parser.cpp  test_socket_client_connection.cpp  test_vm.cpp
bstr/: CMakeLists.txt
bstr/include/bstr/: bstr.hpp
bstr/test/cpp/: test_bstr.cpp
cmake/: test_help.cmake
dtl/: CMakeLists.txt
dtl/include/: dtl.hpp
dtl/include/dtl/: dtl.hpp
dtl/src/: dtl.cpp
dtl/src/cpp/: dtl.cpp
dtl/test/: test_dtl_av.cpp  test_dtl_hv.cpp  test_dtl_sv.cpp
dtl/test/cpp/: test_dtl_av.cpp  test_dtl_hv.cpp  test_dtl_sv.cpp
projects/visual_studio/bstr_test/: bstr_test.sln
projects/visual_studio/bstr_test/bstr_test/: bstr_test.vcxproj  bstr_test.vcxproj.filters
projects/visual_studio/cpp-apx/: cpp-apx.sln
projects/visual_studio/cpp-apx/apx_file_demo/: apx_file_demo.vcxproj  apx_file_demo.vcxproj.filters
projects/visual_studio/cpp-apx/bstr_test/: bstr_test.vcxproj  bstr_test.vcxproj.filters
projects/visual_studio/cpp-apx/cpp_apx/: cpp_apx.cpp  cpp_apx.vcxproj  cpp_apx.vcxproj.filters
projects/visual_studio/cpp-apx/cpp_apx_test/: cpp_apx_test.vcxproj  cpp_apx_test.vcxproj.filters  test_main.cpp
projects/visual_studio/cpp-apx/dtl_test/: dtl_test.vcxproj  dtl_test.vcxproj.filters
projects/visual_studio/cpp-apx/test_client/: test_client.vcxproj  test_client.vcxproj.filters
projects/visual_studio/cpp_apx_test/: cpp_apx_test.sln
projects/visual_studio/cpp_apx_test/cpp_apx_test/: cpp_apx_test.vcxproj  cpp_apx_test.vcxproj.filters  test_main.cpp
projects/visual_studio/dtl_test/: dtl_test.sln
projects/visual_studio/dtl_test/dtl_test/: dtl_test.vcxproj  dtl_test.vcxproj.filters
test_files/: TestNode0.apx  TestNode1.apx
